<resources>
    <string name="app_name">Caixa</string>
    <string name="login">Login</string>
    <string name="conta">Conta</string>
    <string name="hintConta">0000000</string>
    <string name="agencia">Agencia</string>
    <string name="hintAgencia">0000</string>
    <string name="senha">Senha</string>
    <string name="hintSenha">xxxx</string>
    <string name="logar">Logar</string>
    <string name="menu">Menu</string>
    <string name="debito">Debito Automatico</string>
    <string name="operadora">Codigo da Operadora</string>
    <string name="consumidor">Codigo do Consumidor</string>
    <string name="valor">Valor</string>
    <string name="hintValor">0.00</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="transferencia">Transferencia</string>
    <string name="transferir">Transferir</string>
</resources>
